adding descriptions to tables

--- a/slides/chapter5_04_tidyr.Rmd
+++ b/slides/chapter5_04_tidyr.Rmd
@@ -26,9 +26,16 @@ A tidy data format:
 - each row should hold a single observation
 - each cell should hold a single value.
 
-Examine `table1`, `table2`, `table3` and `Table5`.
+Examine `table1`, `table2`, `table3` and `table5`.
+
+They all display the number of TB cases documented by the World Health Organization in Afghanistan, Brazil, and China between 1999 and 2000.
 
 They show the same information in 4 different ways.
+
+Note:
+
+table1, table2, table3, table4a, table4b, and table5 in `tidyr` all display the number of TB cases documented by the World Health Organization in Afghanistan, Brazil, and China between 1999 and 2000. The data contains values associated with four variables (country, year, cases, and population), but each table organizes the values in a different layout. The data is a subset of the data contained in the World Health Organization Global Tuberculosis Report
+
 
 ---
 
@@ -46,6 +53,7 @@ Raw data that we acquired can often be messy and complicated. The tidyr package 
 A tidy data format has a rectangular shape which means it has columns, rows, and cells, just like in a spreadsheet. Each column should hold a single variable, each row should hold a single observation and each cell should hold a single value.
 
 The example on the left shows the same information (country, year, population, and number of cases) organised in 3 different ways.
+
 Examine each of the table.
 
 ---
@@ -64,6 +72,7 @@ Raw data that we acquired can often be messy and complicated. The tidyr package 
 A tidy data format has a rectangular shape which means it has columns, rows, and cells, just like in a spreadsheet. Each column should hold a single variable, each row should hold a single observation and each cell should hold a single value.
 
 The example on the left shows the same information (country, year, population, and number of cases) organised in 3 different ways.
+
 Examine each of the table.
 
 ---
@@ -82,6 +91,7 @@ Raw data that we acquired can often be messy and complicated. The tidyr package 
 A tidy data format has a rectangular shape which means it has columns, rows, and cells, just like in a spreadsheet. Each column should hold a single variable, each row should hold a single observation and each cell should hold a single value.
 
 The example below shows the same information (country, year, population, and number of cases) organised in 3 different ways.
+
 Examine each of the table.
 
 ---
@@ -100,6 +110,7 @@ Raw data that we acquired can often be messy and complicated. The tidyr package 
 A tidy data format has a rectangular shape which means it has columns, rows, and cells, just like in a spreadsheet. Each column should hold a single variable, each row should hold a single observation and each cell should hold a single value.
 
 The example below shows the same information (country, year, population, and number of cases) organised in 3 different ways.
+
 Examine each of the table.
 
 
@@ -193,6 +204,8 @@ Here you see that the case count of each country is separated into two columns b
 table4a
 ```
 
+---
+
 ```{r}
 table4a %>% 
   pivot_longer(c(`1999`, `2000`), names_to = "year", values_to = "cases")
@@ -217,6 +230,7 @@ However, the observation is spread across two rows since there are `cases` and `
 table2
 ```
 
+---
 
 ```{r}
 table2 %>%
