update image path

--- a/slides/chapter1_01_windows.Rmd
+++ b/slides/chapter1_01_windows.Rmd
@@ -48,9 +48,9 @@ One way to think about the relationship between R and RStudio is that R acts lik
 ### Download and Install R 
 
 
-![Install R windows](cran_windows_1.png)
+![Install R windows](chapter1/cran_windows_1.png)
 
-Note: Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](https://cloud.r-project.org/).
+Note: Download the latest version of R from: [The Comprehensive R Archive Network (CRAN)](chapter1/https://cloud.r-project.org/).
 
 Please select Download R for `your operating system`
 
@@ -58,7 +58,7 @@ Please select Download R for `your operating system`
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_2.png)
+![Install R windows](chapter1/chapter1/cran_windows_2.png)
   
 Note: Select base distribution binaries.
 
@@ -67,7 +67,7 @@ Note: Select base distribution binaries.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_3.png)
+![Install R windows](chapter1/cran_windows_3.png)
   
 Note: Download the latest version of R for Windows.
 
@@ -75,7 +75,7 @@ Note: Download the latest version of R for Windows.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_4.png)
+![Install R windows](chapter1/cran_windows_4.png)
   
 Note: Run the downloaded executable file.
 
@@ -84,7 +84,7 @@ Note: Run the downloaded executable file.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_5.png)
+![Install R windows](chapter1/cran_windows_5.png)
   
 Note: Allow the installer to change your device.
 
@@ -93,7 +93,7 @@ Note: Allow the installer to change your device.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_6.png)
+![Install R windows](chapter1/cran_windows_6.png)
   
 Note: Follow the prompts.
 
@@ -102,7 +102,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_7.png)
+![Install R windows](chapter1/cran_windows_7.png)
   
 Note: Follow the prompts.
 
@@ -111,7 +111,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_8.png)
+![Install R windows](chapter1/cran_windows_8.png)
   
 Note: Follow the prompts.
 
@@ -120,7 +120,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_9.png)
+![Install R windows](chapter1/cran_windows_9.png)
   
 Note: Follow the prompts.
 
@@ -129,7 +129,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_10.png)
+![Install R windows](chapter1/cran_windows_10.png)
   
 Note: Follow the prompts.
 
@@ -138,7 +138,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_11.png)
+![Install R windows](chapter1/cran_windows_11.png)
   
 Note: Follow the prompts.
 
@@ -147,7 +147,7 @@ Note: Follow the prompts.
 
 ### Install R on Windows
 
-![Install R windows](cran_windows_12.png)
+![Install R windows](chapter1/cran_windows_12.png)
   
 Note: Follow the prompts.
 
@@ -155,9 +155,9 @@ Note: Follow the prompts.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_1.png)
+![Install RStudio windows](chapter1/rstudio_windows_1.png)
 
-Note: Download the latest version of RStudio from [RStudio](https://www.rstudio.com/products/rstudio/download/). 
+Note: Download the latest version of RStudio from [RStudio](chapter1/https://www.rstudio.com/products/rstudio/download/). 
 
 Scroll down to `All Installers` and download the RStudio version for your operating system. 
 
@@ -165,7 +165,7 @@ Scroll down to `All Installers` and download the RStudio version for your operat
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_2.png)
+![Install RStudio windows](chapter1/rstudio_windows_2.png)
 
 Note: Save the installer on your computer
 
@@ -173,7 +173,7 @@ Note: Save the installer on your computer
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_3.png)
+![Install RStudio windows](chapter1/rstudio_windows_3.png)
 
 Note: Run the executable file to install RStudio
 
@@ -182,7 +182,7 @@ Note: Run the executable file to install RStudio
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_4.png)
+![Install RStudio windows](chapter1/rstudio_windows_4.png)
 
 Note: Allow the installer to make changes on your computer.
 
@@ -190,7 +190,7 @@ Note: Allow the installer to make changes on your computer.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_5.png)
+![Install RStudio windows](chapter1/rstudio_windows_5.png)
 
 Note: Follow the prompts.
 
@@ -198,7 +198,7 @@ Note: Follow the prompts.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_6.png)
+![Install RStudio windows](chapter1/rstudio_windows_6.png)
 
 Note: Follow the prompts.
 
@@ -206,7 +206,7 @@ Note: Follow the prompts.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_7.png)
+![Install RStudio windows](chapter1/rstudio_windows_7.png)
 
 Note: Follow the prompts.
 
@@ -214,7 +214,7 @@ Note: Follow the prompts.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_8.png)
+![Install RStudio windows](chapter1/rstudio_windows_8.png)
 
 Note: Follow the prompts.
 
@@ -222,7 +222,7 @@ Note: Follow the prompts.
 
 ### Install RStudio on Windows
 
-![Install RStudio windows](rstudio_windows_9.png)
+![Install RStudio windows](chapter1/rstudio_windows_9.png)
 
 Note: Follow the prompts.
 
@@ -230,7 +230,7 @@ Note: Follow the prompts.
 
 ### Open RStudio on Windows
 
-![Open RStudio windows](rstudio_windows_10.png)
+![Open RStudio windows](chapter1/rstudio_windows_10.png)
 
 Note: Search for RStudio on your computer, and open it.
 
@@ -238,6 +238,6 @@ Note: Search for RStudio on your computer, and open it.
 
 ### RStudio is ready!
 
-![RStudio on windows](rstudio_windows_11.png)
+![RStudio on windows](chapter1/rstudio_windows_11.png)
 
 Note: Time to learn R!
