--- a/slides/chapter4_01_Project_Structure.Rmd
+++ b/slides/chapter4_01_Project_Structure.Rmd
@@ -27,13 +27,13 @@ options("knitr.graphics.error" = FALSE)
 
 ---
 
-![project selector](project_1.png)
+![project selector](chapter4/project_1.png)
 
 Note: Create a new project by clicking the project selector in the top right corner. This will show you your most recent R projects, and is great for quickly switching between them. To create a new project, select "New Project...".
 
 ---
 
-![new project](project_2.png)
+![new project](chapter4/project_2.png)
 
 Note: 
 If you want to start a new R project in a new location on your computer, select 'New Directory'. 
@@ -44,7 +44,7 @@ For you very first R project, please select 'New Directory'.
 
 ---
 
-![project directories](project_3.png)
+![project directories](chapter4/project_3.png)
 
 Note: There are many different types of R projects that you can create. For a data analysis project we would typically start from an empty 'New Project'. Have a scroll through to see all of the different project types you can create. If you've installed some packages like I have, you'll see some package specific project types too.
 
@@ -52,7 +52,7 @@ For an empty R project, click 'New Project'.
 
 ---
 
-![project types](project_4.png)
+![project types](chapter4/project_4.png)
 
 Note: Give your project (and the folder that will contain it) a name using the 'Directory name' field.
 You can also choose where the project will exist on your computer by clicking the 'Browse...' button.
@@ -63,7 +63,7 @@ Click 'Create Project' to create the project.
 
 ---
 
-![project name](project_5.png)
+![project name](chapter4/project_5.png)
 
 Note: There you have it! You're brand new R project.
 You can see just below the 'Console' tab selector that we are now in the '~/my-awesome-project/' folder. This is exactly where we created our project, and all scripts and data should also be stored here (more on that later).
@@ -92,7 +92,7 @@ readr::write_csv(mtcars, "data/mtcars.csv")
 
 ---
 
-![mtcars data](project_data.png)
+![mtcars data](chapter4/project_data.png)
 
 ---
 
@@ -142,7 +142,7 @@ Much better!
 
 When closing RStudio you might be greeted with this popup:
 
-![save workspace](save_workspace.png)
+![save workspace](chapter4/save_workspace.png)
 
 You should select `Don't Save`!
 
@@ -162,4 +162,4 @@ This helps to ensure that others are able to run your code and produce the resul
 
 You can also prevent saving workspaces in the 'Global Options':
 
-![save workspace setting](save_workspace_preference.png)
+![save workspace setting](chapter4/save_workspace_preference.png)
